--- a/myappfront/src/app/sidenav/sidenav.component.html
+++ b/myappfront/src/app/sidenav/sidenav.component.html
@@ -56,7 +56,7 @@
     </li>
     <li class="sidebar-nav-item">
       <a class="sidebar-nav-link" routerLink="/login" routerLinkActive="active">
-        <i class="sidebar-link-icon fa fa-phone"></i>
+        <i class="sidebar-link-icon fa fa-lock"></i>
         <span class="sidebar-link-text">Admin</span>
       </a>
     </li>
