--- a/myappfront/src/app/navbar-admin/navbar-admin.component.html
+++ b/myappfront/src/app/navbar-admin/navbar-admin.component.html
@@ -20,7 +20,7 @@
         routerLink="/add-helpline"
         routerLinkActive="active"
       >
-        <i class="sidebar-link-icon fa fa-wind"></i>
+        <i class="sidebar-link-icon fa fa-phone"></i>
         <span class="sidebar-link-text">Add Helplines</span>
       </a>
     </li>
@@ -34,33 +34,33 @@
         <span class="sidebar-link-text">Incident List - Common</span>
       </a>
     </li>
-    <!--<li class="sidebar-nav-item">
+    <li class="sidebar-nav-item">
       <a
         class="sidebar-nav-link"
-        routerLink="/womensafety"
+        routerLink="/camp-manage"
         routerLinkActive="active"
       >
-        <i class="sidebar-link-icon fa fa-female"></i>
-        <span class="sidebar-link-text">Women Safety</span>
+        <i class="sidebar-link-icon fa fa-camp"></i>
+        <span class="sidebar-link-text">Adding camps</span>
       </a>
     </li>
     <li class="sidebar-nav-item">
       <a
         class="sidebar-nav-link"
-        routerLink="/helpline"
+        routerLink="/anonymous-report-analyze"
         routerLinkActive="active"
       >
         <i class="sidebar-link-icon fa fa-phone"></i>
-        <span class="sidebar-link-text">Helpline</span>
+        <span class="sidebar-link-text">Incident report- Anonymous</span>
       </a>
-    </li> -->
+    </li>
     <li class="sidebar-nav-item">
       <a
         class="sidebar-nav-link"
         routerLink="/dashboard"
         routerLinkActive="active"
       >
-        <i class="sidebar-link-icon fa fa-phone"></i>
+        <i class="sidebar-link-icon fa fa-lock"></i>
         <span class="sidebar-link-text">Logout</span>
       </a>
     </li>
