--- a/myappfront/src/app/accidents/accidents.component.html
+++ b/myappfront/src/app/accidents/accidents.component.html
@@ -6,5 +6,6 @@
 <app-sidenav></app-sidenav>
 
 <body>
+  <app-live-map></app-live-map>
   <app-incident-report-common></app-incident-report-common>
 </body>
